--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -7,6 +7,7 @@ description=descripci\u00F3n
 search=Escriba texto para filtrar...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
 status=estatus
+close.sesion=cerrar sesi\u00F3n
 
 #unicode
 #\u00E1 á
