Lenguaje para actividades

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -7,7 +7,8 @@ grammar=gram\u00E1tica
 listening=escuchar
 reading=lectura
 writing=escritura
-mental.map=mapa mental
+glossary=glosario
+mind.map=mapa mental
 
 #dashboard
 dashboard.title=completa tus aventuras
@@ -18,3 +19,5 @@ dashboard.homework=tarea
 dashboard.total.activities=total de actividades
 dashboard.teacher=profesor
 dashboard.homework.done=tareas realizadas
+
+#activities
