Properties, activities y activity

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -3,6 +3,7 @@ profile=perfil
 dashboard=tablero
 activity=actividades
 library=biblioteca
+undefined=indefinido
 grammar=gram\u00E1tica
 listening=escuchar
 reading=lectura
@@ -21,3 +22,28 @@ dashboard.teacher=profesor
 dashboard.homework.done=tareas realizadas
 
 #activities
+#Navigation bar
+bar.icon.transcript=trascripci\u00F3n
+bar.icon.match=relacionar
+bar.icon.video=v\u00EDdeo
+bar.icon.=ordenar palabras
+
+#Relacionar Oraciones
+title.match.sentence=relacionar oraci\u00F3n
+title.match.sentence.question=pregunta
+title.match.sentence.answer=respuesta
+
+
+
+#Ordenar palabras
+title.order.words=palabras de orden
+
+
+#unicode
+#\u00E1 á
+#\u00E9 é
+#\u00ED í
+#\u00F3 ó
+#\u00FA ú
+#\u00BF ¿
+#\u0148 ñ
