--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -11,7 +11,8 @@ next=siguiente
 back=atr\u00E1s
 clean=limpiar
 update=actualizar
-save= Guardar
+save= guardar
+homework=realizar tarea
 
 #unicode
 #\u00E1 á
