Properties, mapas mentales

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -38,6 +38,70 @@ title.match.sentence.answer=respuesta
 #Ordenar palabras
 title.order.words=palabras de orden
 
+#Biblioteca Libre
+
+
+language.bar.free.library.a1=level a1
+language.bar.free.library.a2=level a2
+language.bar.free.library.b1=level b1
+language.bar.free.library.b2=level b2
+language.bar.free.library.c1=level c1
+language.bar.free.library.c2=level c2
+
+#Mas actividades
+
+title.order.sentences=ordenar oraciones
+answer.order.sentences=respuesta
+#Completar Oraciones
+title.comple.all.sentences=completa las oraciones
+# Ordenar palabras
+title.description.order.words=ordenar palabras
+#Mensaje ver cideo completo
+title.description.please.watch.the=¡por favor mira el
+title.description.full.video=video completo!
+#mapa mental 2
+map2.title.description=blank cause and effect Diagram
+map2.title.answered=answered
+#mapa mental 3
+map3.title.description=cronological order writing
+#mapa metal 4
+map4.title.description.compare=compare and contrast
+map4.title.description.how=how two thigs are a like and how they are diferent
+#mapa mental 5
+map5.title.compare=compare & contrast
+map5.title.description.how=how the same
+#mapa mental 7
+map7.title.steps=steps to do an experiment
+#mapa mental 8
+map8.title.supporting=supporting deails :
+#mapa mental 9
+map9.title.main=main idea :
+#mapa mental 11
+map10.title.secuence=secuence order
+#mapa mental 12
+map12.title.sequencing=sequencing timeline
+#mapa mental 14
+map14.title.main=main idea and details organized
+#mapa mental 15
+map15.title.definition=definition:
+map15.title.sentence=sentence :
+map15.title.part=Part of Speech:
+map15.title.picture=Picture:
+map15.title.vocabulary=Vocabulary
+map15.title.study=Study
+map15.title.vocabulary.study=Vocabulary Study
+map15.title.suffix=Suffix :
+map15.title.prefix=Prefix :
+map15.title.root=Root :
+map15.title.context=Context:
+map15.title.new.word=New Word :
+map15.title.synonyms=Synonyms :
+map15.title.antonyms=Antonyms:
+
+
+
+
+
 
 #unicode
 #\u00E1 á
