--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -11,7 +11,7 @@ next=siguiente
 back=atr\u00E1s
 clean=limpiar
 update=actualizar
-save= guardar
+submit=enviar
 homework=realizar tarea
 
 #unicode
