Properties, actualizacion de ativity

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -97,6 +97,19 @@ map15.title.context=Context:
 map15.title.new.word=New Word :
 map15.title.synonyms=Synonyms :
 map15.title.antonyms=Antonyms:
+#map16.title.sentence=sentence :
+map16.title.definition=definition:
+map16.title.sentence=sentence :
+map16.title.word=Word :
+map16.title.suffix=suffix :
+map16.title.prefix=prefix :
+map16.title.root=root :
+map16.title.part.speech=Part of Speech :
+map16.title.synonyms=Synonyms :
+map16.title.antonyms=Antonyms:
+map16.title.picture=Picture:
+map16.title.vocabulary.study=VOCABULARY STUDY :
+map16.title.in.your=In your own words :
 
 
 
