--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -60,6 +60,10 @@
 			/WEB-INF/faces-config.xml
 		</param-value>
 	</context-param>
+
+	<session-config>
+		<session-timeout>120</session-timeout>
+	</session-config>
 	<!--
         <security-constraint>
 
