Se agrega al etiqueta de respondido

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -74,7 +74,7 @@ map5.title.description.how=how the same
 #mapa mental 7
 map7.title.steps=steps to do an experiment
 #mapa mental 8
-map8.title.supporting=supporting deails
+map8.title.supporting=supporting details
 #mapa mental 9
 map9.title.main=main idea :
 #mapa mental 11
