Properties, actualizacion de ativity

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -26,8 +26,8 @@ dashboard.homework.done=tareas realizadas
 #Navigation bar
 bar.icon.transcript=trascripci\u00F3n
 bar.icon.match=relacionar
-bar.icon.video=v\u00EDdeo
-bar.icon.=ordenar palabras
+bar.icon.video=video
+bar.icon.order=ordenar palabras
 
 #Relacionar Oraciones
 title.match.sentence=relacionar oraci\u00F3n
