Properties Alumno, actualizacion de ativity

--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -58,7 +58,8 @@
 						<webModule>
 							<groupId>tecolotl</groupId>
 							<artifactId>tecolotl-web</artifactId>
-							<contextRoot>/tecolotl</contextRoot>
+							<contextRoot>/</contextRoot>
+<!--							<contextRoot>/</contextRoot>-->
 						</webModule>
 					</modules>
 				</configuration>
