--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -37,7 +37,7 @@ title.match.sentence.answer=respuesta
 
 
 #Ordenar palabras
-title.order.words=palabras de orden
+title.order.words=ordenenar palabaras
 
 #Biblioteca Libre
 
