Ahora muestra una mensaje de vacio cuando no hay mapa mental

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -21,6 +21,7 @@ dashboard.homework=tarea
 dashboard.total.activities=total de actividades
 dashboard.teacher=profesor
 dashboard.homework.done=tareas realizadas
+dashboard.not.homework=No hay tareas asignadas
 
 #activities
 #Navigation bar
@@ -82,7 +83,7 @@ map10.title.secuence=secuence order
 #mapa mental 12
 map12.title.sequencing=sequencing timeline
 #mapa mental 14
-map14.title.main=main idea and details organized
+map14.title.main=main idea and details organizer
 #mapa mental 15
 map15.title.picture=Picture:
 map15.title.vocabulary=Vocabulary
