--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -58,7 +58,7 @@
 						<webModule>
 							<groupId>tecolotl</groupId>
 							<artifactId>tecolotl-web</artifactId>
-							<contextRoot>/</contextRoot>
+							<contextRoot>/tecolotl/</contextRoot>
 <!--							<contextRoot>/</contextRoot>-->
 						</webModule>
 					</modules>
