--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -56,8 +56,9 @@
 		<description>Multiples archivos de configuración para la navegación</description>
 		<param-name>javax.faces.CONFIG_FILES</param-name>
 		<param-value>
+			/WEB-INF/faces-config.xml,
 			/WEB-INF/alumno/reglas-navegacion.xml,
-			/WEB-INF/faces-config.xml
+			/WEB-INF/profesor/reglas-navegacion.xml
 		</param-value>
 	</context-param>
 
