Se Corregio alumno.properties, coordinacion.properties

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -1,19 +1,19 @@
-dashboard.titulo=escuelas
-dashboard.modal.add.title=agregar escuela
-dashboard.modal.update.title=actualiza escuela
+dashboard.titulo=schools
+dashboard.modal.add.title=add school
+dashboard.modal.update.title=update school
 dashboard.modal.cct=cct
-dashboard.modal.name=nombre
+dashboard.modal.name=name
 dashboard.modal.zipcode=c\u00F3digo postal
 dashboard.modal.colony=colonia
-dashboard.modal.street=calle
+dashboard.modal.street=street
 dashboard.modal.street.num.ext=n\u00FAmero exterior
 dashboard.modal.street.num.int=n\u00FAmero interior
-dashboard.modal.city=municipio
-dashboard.modal.town=estado
+dashboard.modal.city=district
+dashboard.modal.town=state
 dashboard.modalbloqueo.title=bloquear escuela: {0}
 dashboard.modalremove.title=eliminar escuela: {0}
-dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0}, una vez eliminada no se podr\u00E1 recuperar\
-  los datos relacionados con dicha escuela.
+dashboard.modalremove.message=Are you sure you want to delete this school?: {0}, Once deleted you cannot\u00E1 recover\
+  Data related to this school.
 dashboard.search.tooltip.enable=b\u00FAsqueda por CCT o por nombre de escuela
 dashboard.search.tooltip.diseble=no hay escuelas registradas
 dashboard.busqueda.cct=seleccione la CCT para ver detalles
