--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -1,111 +1,76 @@
 #menu
-profile=perfil
-dashboard=tablero
-activity=actividades
-library=biblioteca
-undefined=indefinido
-
-grammar=gram\u00E1tica
-listening=escuchar
-reading=lectura
-writing=escritura
-glossary=glosario
-mind.map=mapa mental
-
+for.all.views.profile=perfil
+for.all.views.dashboard=tablero
+for.all.views.activity=actividades
+for.all.views.library=biblioteca
+for.all.views.undefined=indefinido
+for.all.views.glossary=glosario
+for.all.views.mind.map=mapa mental
 #dashboard
 dashboard.title=completa tus aventuras
 dashboard.email=email
 dashboard.grade=grado
 dashboard.nivel=nivel
+dashboard.edit.profile=editar perfil
 dashboard.homework=tarea
 dashboard.total.activities=total de actividades
 dashboard.teacher=profesor
 dashboard.homework.done=tareas realizadas
 dashboard.not.homework=No hay tareas asignadas
-
 #activities
 #Navigation bar
-bar.icon.transcript=trascripci\u00F3n
-bar.icon.match=relacionar
-bar.icon.video=video
-bar.icon.order=ordenar palabras
-
+activities.bar.icon.transcript=trascripci\u00F3n
+activities.bar.icon.match=relacionar
+activities.bar.icon.video=video
+activities.bar.icon.order=ordenar palabras
 #Relacionar Oraciones
-title.match.sentence=relacionar oraci\u00F3n
-title.match.sentence.question=pregunta
-title.match.sentence.answer=respuesta
-
-
-
+activities.title.match.sentence.question=pregunta
+activities.title.match.sentence.answer=respuesta
 #Ordenar palabras
-title.order.words=ordenenar palabaras
-
+activities.title.order.words=ordenar palabaras
 #Biblioteca Libre
-
-
-language.bar.free.library.a1=level a1
-language.bar.free.library.a2=level a2
-language.bar.free.library.b1=level b1
-language.bar.free.library.b2=level b2
-language.bar.free.library.c1=level c1
-language.bar.free.library.c2=level c2
-
 #Mas actividades
-
-title.order.sentences=ordenar oraciones
-answer.order.sentences=respuesta
+activities.title.order.sentences=ordenar oraciones
 #Completar Oraciones
-title.comple.all.sentences=completa las oraciones
+activities.title.comple.all.sentences=completa las oraciones
 # Ordenar palabras
 title.description.order.words=ordenar palabras
 #Mensaje ver cideo completo
-title.description.please.watch.the=¡por favor mira el
+activities.title.description.please.watch.the=¡por favor mira el
 title.description.full.video=video completo!
 #mapa mental 2
-map2.title.description=blank cause and effect Diagram
-map2.title.answered=answered
+mindmap.map2.title.description=blank cause and effect Diagram
+mindmap.activities.map2.title.answered=answered
 #mapa mental 3
-map3.title.description=cronological order writing
+mindmap.mindmap.map3.title.description=cronological order writing
 #mapa metal 4
-map4.title.description.compare=compare and contrast
-map4.title.description.how=how two thigs are a like and how they are diferent
+mindmap.map4.title.description.compare=compare and contrast
+mindmap.map4.title.description.how=how two thigs are a like and how they are diferent
 #mapa mental 5
-map5.title.compare=compare & contrast
+mindmap.map5.title.compare=compare & contrast
 map5.title.description.how=how the same
 #mapa mental 7
-map7.title.steps=steps to do an experiment
+mindmap.map7.title.steps=steps to do an experiment
 #mapa mental 8
-map8.title.supporting=supporting deails
+mindmap.map8.title.supporting=supporting deails
 #mapa mental 9
-map9.title.main=main idea :
+mindmap.map9.title.main=main idea :
 #mapa mental 11
-map10.title.secuence=secuence order
+mindmap.map10.title.secuence=secuence order
 #mapa mental 12
-map12.title.sequencing=sequencing timeline
+mindmap.map12.title.sequencing=sequencing timeline
 #mapa mental 14
-map14.title.main=main idea and details organizer
+mindmap.map14.title.main=main idea and details organizer
 #mapa mental 15
-map15.title.picture=Picture:
-map15.title.vocabulary=Vocabulary
-map15.title.study=Study
-map15.title.vocabulary.study=Vocabulary Study
-map16.title.definition=definition:
-map16.title.sentence=sentence :
-map16.title.word=Word :
-map16.title.suffix=suffix :
-map16.title.prefix=prefix :
-map16.title.root=root :
-map16.title.part.speech=Part of Speech :
-map16.title.synonyms=Synonyms :
-map16.title.antonyms=Antonyms:
-map16.title.picture=Picture:
-map16.title.vocabulary.study=VOCABULARY STUDY :
-map16.title.in.your=In your own words :
-
-
-
-
-
+mindmap.map15.title.picture=Picture:
+mindmap.map15.title.vocabulary=Vocabulary
+mindmap.map15.title.study=Study
+mindmap.map15.title.vocabulary.study=Vocabulary Study
+mindmap.map16.title.word=Word :
+mindmap.map16.title.root=root :
+more.activity.title.talk=habla con tu pareja
+more.activity.title.matching.words=relacionar palabras
+free.library.title.a1=Nivel A1
 
 #unicode
 #\u00E1 á
@@ -115,3 +80,5 @@ map16.title.in.your=In your own words :
 #\u00FA ú
 #\u00BF ¿
 #\u0148 ñ
+
+
