--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -9,10 +9,11 @@ block=bloquear
 active=activar
 next=siguiente
 back=atr\u00E1s
-clean=limpiar
 update=actualizar
 submit=enviar
 homework=realizar tarea
+
+ready=¡Listo!
 
 #unicode
 #\u00E1 á
