--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -58,8 +58,8 @@
 						<webModule>
 							<groupId>tecolotl</groupId>
 							<artifactId>tecolotl-web</artifactId>
-							<contextRoot>/tecolotl/</contextRoot>
-<!--							<contextRoot>/</contextRoot>-->
+<!--							<contextRoot>/tecolotl/</contextRoot>-->
+							<contextRoot>/</contextRoot>
 						</webModule>
 					</modules>
 				</configuration>
