--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -1,13 +1,13 @@
-for.all.views.menu=men\u00FA
-for.all.administrator.views.options=opciones
-for.all.administrator.views.select=seleccione una opci\u00F3n
+menu=men\u00FA
+options=opciones
+select=seleccione una opci\u00F3n
 word.key=palabra clave
-for.all.administrator.views.write.text=escriba texto
-for.all.administrator.views.description=descripci\u00F3n
-for.all.administrator.views.search=Escriba texto para filtrar...
-for.all.administrator.views.pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
-for.all.administrator.views.status=estatus
-for.all.studen.views.close.sesion=cerrar sesi\u00F3n
+write.text=escriba texto
+description=descripci\u00F3n
+search=Escriba texto para filtrar...
+pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
+status=estatus
+close.sesion=cerrar sesi\u00F3n
 
 #unicode
 #\u00E1 á
