Actualizacion de Resource (activities.word.order.instruction.title)

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -28,6 +28,8 @@ activities.title.match.sentence.question=pregunta
 activities.title.match.sentence.answer=respuesta
 #Ordenar palabras
 activities.title.order.words=ordenar palabaras
+activities.word.order.instruction.title=ordena las palabras para formar oraciones correctas
+
 #Biblioteca Libre
 #Mas actividades
 activities.title.order.sentences=ordenar oraciones
