Se agregan las traducciones para dentro de los javascript

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -43,6 +43,13 @@ title.description.order.words=ordenar palabras
 #Mensaje ver cideo completo
 activities.title.description.please.watch.the=¡por favor mira el
 title.description.full.video=video completo!
+
+#activity
+send.message=se ha enviado de forma correcta tu respuesta
+send.message.error=es necesario relacionar más ejercicios
+send.message.transcript=al selecionar esta tarea, no podrá selecciona la actividad de video o ver algun otro transcript
+send.message.not.send=no se puede enviar la respuesta hasta terminar de resolver
+
 #mapa mental 2
 mindmap.map2.title.description=blank cause and effect Diagram
 mindmap.activities.map2.title.answered=answered
