Muestra de forma correcta la vista de completar oracion

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -46,9 +46,10 @@ title.description.full.video=video completo!
 
 #activity
 send.message=se ha enviado de forma correcta tu respuesta
-send.message.error=es necesario relacionar más ejercicios
-send.message.transcript=al selecionar esta tarea, no podrá selecciona la actividad de video o ver algun otro transcript
+send.message.error=es necesario relacionar m\u00E1s ejercicios
+send.message.transcript=al selecionar esta tarea, no podr\u00E1 selecciona la actividad de video o ver alg\u00FAn otro transcript
 send.message.not.send=no se puede enviar la respuesta hasta terminar de resolver
+send.message.sentence.tip=seleccione una palabra para completar oreaci\u00F3n
 
 #mapa mental 2
 mindmap.map2.title.description=blank cause and effect Diagram
