--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -9,6 +9,16 @@ pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
 status=estatus
 close.sesion=cerrar sesi\u00F3n
 home=principal
+logging.registry=registro
+logging.teacher=profesor
+logging.student=alumno
+logging.nickname=apodo
+logging.forgot.my.password=olvide mi contrase\u00F1a
+logging.I.do.not.have.an.account=No tengo una cuenta
+logging.option.1=opcion 1
+logging.option.2=opcion 2
+logging.option.3=opcion 3
+
 
 #unicode
 #\u00E1 á
