se genera documento profesor properties y su defincion de palabras

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -1,3 +1,20 @@
 #palabras para la vista principal
 dashboard.title=bienvenido
 dashboard.nickname=apodo
+dashboard.email=correo
+dashboard.school.cycle=ciclo escolar
+dashboard.start=inicio
+dashboard.end=fin
+dashboard.description=descripci\u00F3n
+dashboard.table.title.group=sus grupos para este ciclo escolar
+dashboard.table.title.not.group=no tiene grupos asigandos en este ciclo escolar
+dashboard.group=grupo
+dashboard.options=opciones 
+
+#unicode
+#\u00E1 á
+#\u00E9 é
+#\u00ED í
+#\u00F3 ó
+#\u00FA ú
+#\u00BF ¿
