--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -12,9 +12,10 @@ back=atr\u00E1s
 update=actualizar
 submit=enviar
 homework=realizar tarea
+do.homework=realizar tarea
 end=terminar
 
-ready=¡Listo!
+ready=\u00A1Listo!
 
 #unicode
 #\u00E1 á
@@ -23,3 +24,4 @@ ready=¡Listo!
 #\u00F3 ó
 #\u00FA ú
 #\u00BF ¿
+#\u00A1 ¡
