--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -9,7 +9,8 @@ dashboard.description=descripci\u00F3n
 dashboard.table.title.group=sus grupos para este ciclo escolar
 dashboard.table.title.not.group=no tiene grupos asigandos en este ciclo escolar
 dashboard.group=grupo
-dashboard.options=opciones
+dashboard.table.schoolgrade=grado
+dashboard.total.students=total alumnos
 
 #unicode
 #\u00E1 á
