--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -3,7 +3,7 @@ for.all.views.profile=perfil
 for.all.views.dashboard=tablero
 for.all.views.activity=actividades
 for.all.views.library=biblioteca
-for.all.views.undefined=indefinido
+for.all.views.practices=practicas
 for.all.views.glossary=glosario
 for.all.views.mind.map=mapa mental
 #dashboard
@@ -27,6 +27,8 @@ activities.bar.icon.order=ordenar palabras
 activities.title.match.sentence.question=pregunta
 activities.title.match.sentence.answer=respuesta
 #Ordenar palabras
+#login
+login.valid.password=Estimado usuario, de favor seleccionar una contraseña
 activities.title.order.words=ordenar palabaras
 activities.word.order.instruction.title=ordena las palabras para formar oraciones correctas
 
