actualizacion de properties de boton y alumnos

--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -6,9 +6,10 @@ detail=detalles
 edit=editar
 remove=eliminar
 block=bloquear
-active=activar
+active=activar profesor
 next=siguiente
 back=atr\u00E1s
+clean=limpiar
 update=actualizar
 submit=enviar
 homework=realizar tarea
