en la vista de more-activity.xhtml se traudjeron los titulos de las actividades

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -80,9 +80,14 @@ mindmap.map15.title.study=Study
 mindmap.map15.title.vocabulary.study=Vocabulary Study
 mindmap.map16.title.word=Word :
 mindmap.map16.title.root=root :
+
+#more activity
 more.activity.title.talk=habla con tu pareja
 more.activity.title.matching.words=relacionar palabras
-free.library.title.a1=Nivel A1
+more.activity.title.order.prayer=ordernar oracion
+more.activity.title.match.image=relacionar imagen
+more.activity.title.speake=hablar
+more.activity.title.complete.prayers=completar oracion
 
 #unicode
 #\u00E1 á
