se agregaron definiciones de ayuda en el diccionario de palabras para actividades y la de mas activivades.

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -46,9 +46,13 @@ title.description.full.video=video completo!
 #activity
 send.message=se ha enviado de forma correcta tu respuesta
 send.message.error=es necesario relacionar m\u00E1s ejercicios
-send.message.transcript=al selecionar esta tarea, no podr\u00E1 selecciona la actividad de video o ver alg\u00FAn otro transcript
+send.message.transcript=al selecionar esta tarea, no podr\u00E1 seleccionar la actividad de video o ver alg\u00FAn otro transcript
 send.message.not.send=no se puede enviar la respuesta hasta terminar de resolver
-send.message.sentence.tip=seleccione una palabra para completar oreaci\u00F3n
+activity.help.message.video=Mira el video cuidadosamente
+activity.help.message.match= haz que coincidan las columnas
+activity.help.message.words=realiza oraciones usando las palabras proporcionadas
+activity.help.message.fill.in.the.blanks=Mire el video y complete los espacios en blanco
+
 
 #mapa mental 2
 mindmap.map2.title.description=blank cause and effect Diagram
@@ -87,7 +91,10 @@ more.activity.title.matching.words=relacionar palabras
 more.activity.title.order.prayer=ordernar oracion
 more.activity.title.match.image=relacionar imagen
 more.activity.title.speake=hablar
-more.activity.title.complete.prayers=completar oracion
+more.activity.title.complete.prayers=completar oraci\u00F3n
+more.activity.help.message.order.sentences=ordena las oraciones
+more.activity.help.message.match.image=relaciona las palabras con la imagen
+more.activity.help.message.select.word=seleccione una palabra para completar oraci\u00F3n
 
 #unicode
 #\u00E1 á
