se quita el uk-textprimary

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -17,6 +17,8 @@ dashboard.total.activities=total de actividades
 dashboard.teacher=profesor
 dashboard.homework.done=tareas realizadas
 dashboard.not.homework=No hay tareas asignadas
+dashboard.empty=vacio
+
 #activities
 #Navigation bar
 activities.bar.icon.transcript=trascripci\u00F3n
