--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -17,6 +17,9 @@ logging.nickname=apodo
 logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
 
+#no-encontrado.xhtml
+no.econtrado.title=¡Ups, no encontre la pagina!
+
 #unicode
 #\u00E1 á
 #\u00E9 é
