estilos a la vista sin permisos

--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -20,6 +20,9 @@ logging.not.account=no tengo una cuenta
 #no-encontrado.xhtml
 no.econtrado.title=¡Ups, no encontre la pagina!
 
+#sin-permiso.xhtml
+sin.permiso.title=Estimado usuario, no pudes visitar esta pagina ya que tu rol es: {0}, dar click en el boton para cerrar sesion
+
 #unicode
 #\u00E1 á
 #\u00E9 é
