estilos al boton regresar de la vista no manejable

--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,11 @@
 		<location>/error/no-manejable.xhtml</location>
 	</error-page>
 
+	<icon>
+		<small-icon>/resources/img/esquadron.svg</small-icon>
+		<large-icon>/resources/img/esquadron.svg</large-icon>
+	</icon>
+
 	<!--  Project Stage	-->
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
