Se resuelve ico con mime type

--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -50,10 +50,10 @@
 		<location>/error/no-manejable.xhtml</location>
 	</error-page>
 
-	<icon>
-		<small-icon>/resources/img/esquadron.svg</small-icon>
-		<large-icon>/resources/img/esquadron.svg</large-icon>
-	</icon>
+	<mime-mapping>
+		<extension>ico</extension>
+		<mime-type>image/x-icon</mime-type>
+	</mime-mapping>
 
 	<!--  Project Stage	-->
 	<context-param>
