resourse bundle de un letrero

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -44,6 +44,8 @@ title.description.order.words=ordenar palabras
 #Mensaje ver cideo completo
 activities.title.description.please.watch.the=¡por favor mira el
 title.description.full.video=video completo!
+#mensaje contestar transcript
+title.description.full.request=Necesitas llenar todas las respuestas
 
 #activity
 send.message=se ha enviado de forma correcta tu respuesta
@@ -97,6 +99,8 @@ more.activity.title.complete.prayers=completar oraci\u00F3n
 more.activity.help.message.order.sentences=ordena las oraciones
 more.activity.help.message.match.image=relaciona las palabras con la imagen
 more.activity.help.message.select.word=seleccione una palabra para completar oraci\u00F3n
+#biblioteca libre
+
 
 #unicode
 #\u00E1 á
