Borrar un grupo (logina de negocio)

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -138,6 +138,10 @@ detalleprofesor.active.modal.new.teacher.grup=grupo
 detalleprofesor.active.modal.new.teacher.degree=grado
 detalleprofesor.active.modal.header.password=contrase\u0148a
 
+#profesores
+profesores.borrargrupo=esta seguro que desea eliminar el grupo {0} {1}
+profesores.no.borrargrupo=no se puede eliminar el grupo {0} {1} por que tiene {2} alumnos
+
 #Menu detalle-escuela
 menu.schools=escuelas
 menu.catalog=cat\u00E1logo
