cambio en los letreros de los tooltips

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -20,7 +20,7 @@ dashboard.busqueda.cct=seleccione la CCT para ver detalles
 dashboard.validation.cct=la escuela ya axiste
 dashboard.validation.zipcode=c\u00F3dido postal no existe en la base de datos
 dashboard.success.zipcode=c\u00F3dido postal localizado correctamente
-dashboard.button.add=agrega una nueva escuela
+dashboard.button.add=agregar escuela
 dashboard.header.student=alumnos asignados
 dashboard.header.student.used=utilizados
 dashboard.header.teacher=profesores asignados
@@ -42,7 +42,7 @@ schooldetail.contacts.tooltip.add=agregar un nuevo contacto
 schooldetail.lisense.id=id
 schooldetail.lisense.datestart=fecha inicio
 schooldetail.lisense.dateacquisition=fecha adquisici\u00F3n
-schooldetail.lisense.tooltip.add=agregar un nuevo licencia
+schooldetail.lisense.tooltip.add=agregar licencia
 schooldetail.modal.addcontact.title=agregar Contacto
 schooldetail.modal.updatecontact=modificar contacto
 schooldetail.modal.removecontact.title=eliminar contacto
