hover para visualizar las calificaciones de cada una de las actividades de los alumnos.

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -18,6 +18,7 @@ dashboard.teacher=profesor
 dashboard.homework.done=tareas realizadas
 dashboard.not.homework=No hay tareas asignadas
 dashboard.empty=vacio
+dashboard.score=calificaci\u00F3n
 
 #activities
 #Navigation bar
