Se actualiza resources bundle para eliminar los signos de ??edit?? y se cambia el placeholder de numero exterior por interior.

--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -16,6 +16,7 @@ logging.student=alumno
 logging.nickname=apodo
 logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
+edit=editar
 
 #no-encontrado.xhtml
 no.econtrado.title=¡Ups, no encontre la pagina!
