Resources bundles para agregar por csv

--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -10,6 +10,7 @@ status=estatus
 password=contrase\u00F1a
 close.sesion=cerrar sesi\u00F3n
 home=principal
+correo.electronico=correo electronico
 logging.registry=registro
 logging.teacher=profesor
 logging.student=alumno
