--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -12,10 +12,31 @@ dashboard.group=grupo
 dashboard.table.schoolgrade=grado
 dashboard.total.students=total alumnos
 
+
+#agregar-csv.xhtml
+agregarcsv.title=agregar estudiante
+agregarcsv.file.select=seleccione un archivo para agregar alumnos
+agregarcsv.file=seleccion archivo
+agregarscv.student=cupo de alumnos
+agregarscv.add.student=agregar un alumno
+agregarscv.student.correct=alumnos correctos
+agregarscv.student.not.correct=alumnos incorrectos
+agregarscv.student.nickname=apodo
+agregarscv.student.name=nombre
+agregarscv.student.surname=apellido paterno
+agregarscv.student.surname2=apellido materno
+agregarscv.student.birthdate=fecha de nacimiento
+agregarscv.student.languaje=nivel lenguaje
+agregarscv.student.sex=genero
+agregarscv.validate=validar
+agregarscv.sex.m=masculino
+agregarscv.sex.f=femenino
+
+
 #unicode
-#\u00E1 á
-#\u00E9 é
-#\u00ED í
-#\u00F3 ó
-#\u00FA ú
-#\u00BF ¿
+#\u00E1 ï¿½
+#\u00E9 ï¿½
+#\u00ED ï¿½
+#\u00F3 ï¿½
+#\u00FA ï¿½
+#\u00BF ï¿½
