--- a/tecolotl-administracion/pom.xml
+++ b/tecolotl-administracion/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>arquillian-protocol-servlet</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
