Actualizacion de RESOURCE admin-alumnos.xhtml

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -11,6 +11,15 @@ dashboard.table.title.not.group=no tiene grupos asigandos en este ciclo escolar
 dashboard.group=grupo
 dashboard.table.schoolgrade=grado
 dashboard.total.students=total alumnos
+student.administration.title= administrar alumno
+student.administration.nickname= apodo
+student.administration.mail=correo electronico
+student.administration.group=grupo
+student.administration.grade=grado
+student.administration.title.students.class=alumnos de la clase
+student.administration.colum.name=nombre
+student.administration.title.passwords=contraseñas
+
 
 
 #agregar-csv.xhtml
