--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -15,9 +15,13 @@ submit=enviar
 homework=realizar tarea
 do.homework=realizar tarea
 end=terminar
-
-
 ready=\u00A1Listo!
+
+#Vista admin-alumnos.xhtml
+passwords=contrase\u00F1as
+download=descargar
+report=reporte
+
 
 #unicode
 #\u00E1 á
