--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -18,6 +18,8 @@ logging.nickname=apodo
 logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
 edit=editar
+detail=detalle
+
 
 #no-encontrado.xhtml
 no.econtrado.title=¡Ups, no encontre la pagina!
